--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "echo-ode-frontend"]
+[submodule "frontend"]
 	path = frontend
 	url = https://github.com/DahalPratik/echo-ode-frontend.git
