--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/munannoo/frontend
-[submodule "backend"]
-	path = backend
-	url = https://github.com/PhuyalGaurav/sansi-backend.git
+[submodule "Django Backend"]
+	path = Django Backend
+	url = https://github.com/PhuyalGaurav/sansi-dj-backend.git
